tests/NormalTests/paczka2/big_fuzzy/84778552.err
Error in line 3: A932 A932 25,0
Error in line 13: SJ9uC6aNq A932 68,3
Error in line 14: A932 S553 88,3
Error in line 20: A932 A932 16,2
Error in line 23: VKe5i S553 19,7
Error in line 27: VKe5i S713 91,7
Error in line 15: SJ9uC6aNq S713 89,7
Error in line 31: cwHrV S713 99,7
Error in line 36: mKGKE5T S262 68,3
Error in line 43: mKGKE5T S262 73,6
Error in line 44: mKGKE5T A932 21,4
Error in line 57: cwHrV A932 20,6
Error in line 59: cwHrV S713 87,7
Error in line 60: cwHrV S553 3,7
Error in line 61: mKGKE5T A932 82,2
Error in line 77: VKe5i S713 46,1
Error in line 83: ptwL S713 41,1
Error in line 84: ptwL S262 69,3
Error in line 92: ptwL A932 57,3
Error in line 94: ptwL S553 32,8
Error in line 93: F6Jz1Blll0 S262 67,4
Error in line 97: cwHrV S262 6,7
Error in line 103: cwHrV S713 25,0
Error in line 120: VKe5i S262 86,9
Error in line 124: A932 S262 25,0
Error in line 132: F6Jz1Blll0 S553 62,5
Error in line 140: cwHrV S553 38,7
Error in line 139: mKGKE5T S553 27,5
Error in line 131: A932 A932 134,5
Error in line 145: cwHrV S262 62,8
Error in line 150: ptwL S553 36,0
Error in line 146: VKe5i S713 42,9
Error in line 165: VKe5i S553 54,3
Error in line 166: VKe5i S262 43,1
Error in line 162: SJ9uC6aNq S262 6,4
Error in line 160: ptwL A932 98,3
Error in line 177: cwHrV S553 1,2
Error in line 198: mKGKE5T A932 4,5
Error in line 192: VKe5i S553 80,4
Error in line 197: SJ9uC6aNq S713 21,7
Error in line 176: F6Jz1Blll0 S713 5,4
Error in line 208: VKe5i S262 99,2
Error in line 204: ptwL S713 42,8
Error in line 209: VKe5i A932 98,3
Error in line 211: ptwL S553 47,1
Error in line 222: ptwL S713 37,0
Error in line 233: VKe5i S553 87,3
Error in line 235: VKe5i A932 54,8
Error in line 237: VKe5i S713 69,5
Error in line 243: ptwL S553 5,8
Error in line 248: SJ9uC6aNq A932 71,7
